# resistor-optimization

./: .eslintrc.js  .gitignore  .gitmodules  200.html  CMakeLists.txt  CNAME  README.md  index.html  nuxt.config.js  package-lock.json  package.json
.github/workflows/: main.yml
_nuxt/: entry.4d9dde02.js  entry.73149179.js  entry.D_EqDczB.js  entry.f670504c.js  error-404.4f1df0f6.js  error-404.758b2265.js  error-404.9bbabd74.js  error-404.BY8ATkaH.js  error-500.5bfe3b10.js  error-500.BIPP0OLy.js  error-500.cbd91397.js  error-500.ea14cd99.js  index.079ad137.css  index.2c297755.js  index.672b397f.js  index.7936d564.js  index.BRnN2wJY.css  index.yEOtCve_.js  resistor-optimization-185b2140.js  resistor-optimization-6f757161.js  resistor-optimization-lon0xTTQ.js  resistor-optimization.wasm  vue.f36acd1f.C-Re-I_u.js
_nuxt/builds/: latest.json
_nuxt/builds/meta/: 189479e8-c37d-41d5-b99d-ee2ba4546413.json
assets/styles/: common.css
assets/wasm/: resistor-optimization.js  resistor-optimization.wasm
components/: MaxResistorCountInput.vue  ResistanceTargetInput.vue  ResistorInputList.vue  ResultSchematic.vue
pages/: index.vue
resistor-optimization/: CMakeLists.txt  worker.js
resistor-optimization/include/: Element.hpp  ElementContainer.hpp  ParallelContainer.hpp  ResistanceOptimizer.hpp  Resistor.hpp  SVGElement.hpp  SeriesContainer.hpp  combinations_with_replacement.hpp
resistor-optimization/src/: ElementContainer.cpp  Main.cpp  ParallelContainer.cpp  ResistanceOptimizer.cpp  Resistor.cpp  SVGElement.cpp  SeriesContainer.cpp  combinations_with_replacement.cpp
